--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "vtk.js": "^29.11.2"
   },
   "scripts": {
     "start": "react-scripts start",
